[package]
name = "getbooru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
fantoccini = "0.19"
regex = "1.7"
reqwest = "0.11"
roxmltree = "0.17.0"
scraper = "0.12"
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}